force-app/main/default/objects/Member_Vetting__c/Member_Vetting__c.object-meta.xml
<CustomObject>
    <label>Member Vetting</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Vetting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members Vetting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>