force-app/main/default/objects/Member_Vetting__c/fields/Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Name__c</fullName>
    <label>Assessment Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>