force-app/main/default/objects/Member_Vetting__c/fields/Assessment_Platform__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Platform__c</fullName>
    <label>Assessment Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glider Assessment</fullName>
            </value>
            <value>
                <fullName>Imocha Assessment</fullName>
            </value>
            <value>
                <fullName>Customer Assessment</fullName>
            </value>
            <value>
                <fullName>Glider Screenbot</fullName>
            </value>
            <value>
                <fullName>Coderbyte Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>