force-app/main/default/objects/Member_Vetting__c/fields/Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Score__c</fullName>
    <label>Assessment Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>