force-app/main/default/objects/Member_Vetting__c/fields/Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Status__c</fullName>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>