force-app/main/default/objects/Member_Vetting__c/fields/Assessment_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Submit_Date__c</fullName>
    <label>Assessment Submit Date</label>
    <type>Date</type>
</CustomField>