force-app/main/default/objects/Member_Vetting__c/fields/Cheat_Probablity__c.field-meta.xml
<CustomField>
    <fullName>Cheat_Probablity__c</fullName>
    <label>Cheat Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>