force-app/main/default/objects/Member_Vetting__c/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <label>Interview Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>