force-app/main/default/objects/Member_Vetting__c/fields/Interviewers_Name__c.field-meta.xml
<CustomField>
    <fullName>Interviewers_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewers Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Torc_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>