force-app/main/default/objects/Member_Vetting__c/fields/Member_Vetting_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Vetting_Status__c</fullName>
    <label>Member Vetting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Vetted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Vetted</fullName>
            </value>
            <value>
                <fullName>Failed Vetting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>