force-app/main/default/objects/Member_Vetting__c/fields/Reviewer_Link__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Link__c</fullName>
    <label>Reviewer Link</label>
    <type>Url</type>
</CustomField>