force-app/main/default/objects/Member_Vetting__c/fields/Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Score_Percentage__c</fullName>
    <label>Score Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>