force-app/main/default/objects/Member_Vetting__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>