force-app/main/default/objects/Member_Vetting__c/fields/Vetting_Method__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Method__c</fullName>
    <label>Vetting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Screenbot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>